# navil

./: .dockerignore  .gitignore  .navil-scope.example.yml  LICENSE  Makefile  README.md  navil.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CREATION_GUIDE.md  IMPLEMENTATION.md  PRODUCT_PLAN.md  README.md  RESEARCH.md  RUN_USAGE.md  TESTING.md
navil/: __init__.py  __main__.py  config.py  constants.py
navil/api/: __init__.py  middleware.py  schemas.py  server.py
navil/api/routes/: __init__.py  brain.py  config.py  findings.py  scans.py  ws.py
navil/brain/: __init__.py  actions.py  agent.py  environment.py  memory.py  reward.py  state.py  trainer.py
navil/chains/: __init__.py  builder.py  executor.py  graph.py
navil/cli/: app.py  display.py  local_audit.py  menu_shell.py
navil/cli/commands/: brain.py  config.py  gui.py  report.py  scan.py  scope.py  start.py
navil/core/: __init__.py  engine.py  scheduler.py  scope.py  session.py
navil/dashboard/: index.html
navil/dashboard/css/: dashboard.css
navil/dashboard/js/: app.js  charts.js  scanner.js  websocket.js
navil/gui/: __init__.py  __main__.py  app.py  main_window.py  theme.py  worker.py
navil/integrations/: __init__.py  burp.py  metasploit.py  nuclei.py
navil/knowledge/: __init__.py  models.py  patterns.py  store.py  vectors.py
navil/mutator/: __init__.py  corpus.py  encoder.py  engine.py  genetic.py
navil/mutator/payloads/: lfi.json  (+4 more)
navil/recon/: __init__.py  auth.py  crawler.py  sitemap.py  spider.py  tech_detect.py
navil/reporting/: __init__.py  exporters.py  generator.py
navil/scanner/: __init__.py  active.py  base.py  detector.py  passive.py
navil/utils/: __init__.py  crypto.py  http.py  logger.py  rate_limiter.py  validators.py
scripts/: seed_payloads.py  setup.sh  train.py
tests/: conftest.py  test_api.py  test_brain.py  test_chains.py  test_cli.py  test_crawler.py  test_knowledge.py  test_local_audit.py  test_mutator.py  test_scanner.py  test_scope.py
(+16 files in other folders)
