[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navil"
version = "0.1.0"
description = "Navil: autonomous, scope-enforced application security assessment platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Navil Contributors"}
]
keywords = ["security", "scanner", "fastapi", "rl", "devsecops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Internet :: WWW/HTTP"
]

dependencies = [
  "aiosqlite>=0.20.0",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "jinja2>=3.1.4",
  "networkx>=3.4.2",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "pyyaml>=6.0.2",
  "rich>=13.9.2",
  "structlog>=24.4.0",
  "typer>=0.12.5",
  "uvicorn[standard]>=0.31.0",
  "weasyprint>=62.3"
]

[project.optional-dependencies]
playwright = ["playwright>=1.48.0"]
ml = ["gymnasium>=0.29.1", "numpy>=2.1.1", "torch>=2.4.1"]
export = ["python-dateutil>=2.9.0"]

[project.scripts]
navil = "navil.cli.app:app"
navil-api = "navil.api.server:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["navil*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
disable_error_code = ["import-untyped"]
exclude = ["build", "dist"]
